--- a/算法/已刷.md
+++ b/算法/已刷.md
@@ -19,9 +19,12 @@
 | 27 | [移除元素](https://leetcode.cn/problems/remove-element/description/) | ✅ | ⭐ |
 | 41 | [缺失的第一个正数](https://leetcode.cn/problems/first-missing-positive/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐⭐ |
 | 42 | [接雨水](https://leetcode.cn/problems/trapping-rain-water/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
+| 48 | [旋转图像](https://leetcode.cn/problems/rotate-image/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 49 | [字母异位词分组](https://leetcode.cn/problems/group-anagrams/description/) | ✅ | ⭐ |
 | 53 | [最大子数组和](https://leetcode.cn/problems/maximum-subarray/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 54 | [螺旋矩阵](https://leetcode.cn/problems/spiral-matrix/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 56 | [合并区间](https://leetcode.cn/problems/merge-intervals/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 73 | [矩阵置零](https://leetcode.cn/problems/set-matrix-zeroes/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 76 | [最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/description/) | ✅ | ⭐⭐⭐ |
 | 83 | [删除排序链表中的重复元素](https://leetcode.cn/problems/remove-duplicates-from-sorted-list/description/) | ✅ | ⭐ |
 | 128 | [最长连续序列](https://leetcode.cn/problems/longest-consecutive-sequence/description/) | ✅ | ⭐⭐ |
@@ -29,6 +32,7 @@
 | 189 | [轮转数组](https://leetcode.cn/problems/rotate-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 238 | [除自身以外数组的乘积](https://leetcode.cn/problems/product-of-array-except-self/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 239 | [滑动窗口最大值](https://leetcode.cn/problems/sliding-window-maximum/description/) | ✅ | ⭐⭐ |
+| 240 | [搜索二维矩阵 II](https://leetcode.cn/problems/search-a-2d-matrix-ii/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 283 | [移动零](https://leetcode.cn/problems/move-zeroes/description/) | ✅ | ⭐ |
 | 303 | [区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/description/) | ✅ | ⭐ |
 | 304 | [二维区域和检索 - 矩阵不可变](https://leetcode.cn/problems/range-sum-query-2d-immutable/description/) | ✅ | ⭐⭐ |
