--- a/算法/已刷.md
+++ b/算法/已刷.md
@@ -8,6 +8,8 @@
 
 >这里的难度是题目的实际难度。
 
+>count:34。
+
 | 题号 | 地址 | 是否已刷 | 难度 |
 | --- | --- |--- |--- |
 | 1 | [两数之和](https://leetcode.cn/problems/two-sum/description/) | ✅ | ⭐ |
