--- a/算法/如何学习算法.md
+++ b/算法/如何学习算法.md
@@ -3,3 +3,17 @@
 - 1.看别人总结的内容。
 
 - 2.自己多练多写，多总结。
+
+- 3.惟手熟尔。
+
+- 4.参考资料：
+
+- （1）leetcode题解
+
+- （2）B站搜索视频：比较优质的算法up：给我个面子中不、代码随想录、睡不醒的鲤鱼
+
+- （3）[labuladong 的算法笔记](https://github.com/labuladong/fucking-algorithm)
+
+- （4）[Hello 算法](https://www.hello-algo.com/)
+
+- 5.学习 => 复习 => 复习 => 复习 => ...... => 惟手熟尔
