--- a/算法/已刷.md
+++ b/算法/已刷.md
@@ -35,10 +35,15 @@
 | 73 | [矩阵置零](https://leetcode.cn/problems/set-matrix-zeroes/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 76 | [最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/description/) | ✅ | ⭐⭐⭐ |
 | 83 | [删除排序链表中的重复元素](https://leetcode.cn/problems/remove-duplicates-from-sorted-list/description/) | ✅ | ⭐ |
+| 94 | [二叉树的中序遍历](https://leetcode.cn/problems/binary-tree-inorder-traversal/description/) | ✅ | ⭐ |
+| 102 | [二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/description/) | ✅ | ⭐ |
+| 104 | [二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 128 | [最长连续序列](https://leetcode.cn/problems/longest-consecutive-sequence/description/) | ✅ | ⭐⭐ |
 | 138 | [随机链表的复制](https://leetcode.cn/problems/copy-list-with-random-pointer/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 141 | [环形链表](https://leetcode.cn/problems/linked-list-cycle/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 142 | [环形链表 II](https://leetcode.cn/problems/linked-list-cycle-ii/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 144 | [二叉树的前序遍历](https://leetcode.cn/problems/binary-tree-preorder-traversal/description/) | ✅ | ⭐ |
+| 145 | [二叉树的后序遍历](https://leetcode.cn/problems/binary-tree-postorder-traversal/description/) | ✅ | ⭐ |
 | 146 | [LRU 缓存](https://leetcode.cn/problems/lru-cache/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 148 | [排序链表](https://leetcode.cn/problems/sort-list/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 160 | [相交链表](https://leetcode.cn/problems/intersection-of-two-linked-lists/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
