--- a/算法/图.md
+++ b/算法/图.md
@@ -1,3 +1,13 @@
 # 图
 
+- 1.图的组成：顶点（vertex）、边（edge）。
 
+- 2.无向图：边没有方向。
+
+- 3.有向图：边有方向。
+
+- 4.入度（indegree）：有多少条边指向这个顶点。
+
+- 5.出度（outdegree）：有多少条边从该顶点指出。
+
+- 6.邻接矩阵：使用一个n*n的矩阵表示图，每一行（列）代表一个顶点，矩阵元素代表边，用1或0表示两个顶点之间是否存在边。
