--- a/算法/已刷.md
+++ b/算法/已刷.md
@@ -58,6 +58,9 @@
 | 199 | [二叉树的右视图](https://leetcode.cn/problems/binary-tree-right-side-view/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 200 | [岛屿数量](https://leetcode.cn/problems/number-of-islands/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 206 | [反转链表](https://leetcode.cn/problems/reverse-linked-list/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 207 | [课程表](https://leetcode.cn/problems/course-schedule/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
+| 208 | [实现 Trie (前缀树)](https://leetcode.cn/problems/implement-trie-prefix-tree/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 210 | [课程表 II](https://leetcode.cn/problems/course-schedule-ii/description/) | ✅ | ⭐⭐ |
 | 226 | [翻转二叉树](https://leetcode.cn/problems/invert-binary-tree/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 230 | [二叉搜索树中第K小的元素](https://leetcode.cn/problems/kth-smallest-element-in-a-bst/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 234 | [回文链表](https://leetcode.cn/problems/palindrome-linked-list/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
@@ -74,3 +77,4 @@
 | 543 | [二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 560 | [和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 567 | [字符串的排列](https://leetcode.cn/problems/permutation-in-string/description/) | ✅ | ⭐ |
+| 994 | [腐烂的橘子](https://leetcode.cn/problems/rotting-oranges/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
