--- a/算法/已刷.md
+++ b/算法/已刷.md
@@ -15,6 +15,7 @@
 | 1 | [两数之和](https://leetcode.cn/problems/two-sum/description/) | ✅ | ⭐ |
 | 2 | [两数相加](https://leetcode.cn/problems/add-two-numbers/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 3 | [无重复字符的最长子串](https://leetcode.cn/problems/longest-substring-without-repeating-characters/description/) | ✅ | ⭐ |
+| 4 | [寻找两个正序数组的中位数](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐⭐ |
 | 5 | [最长回文子串](https://leetcode.cn/problems/longest-palindromic-substring/description/) | ✅ | ⭐⭐ |
 | 11 | [盛最多水的容器](https://leetcode.cn/problems/container-with-most-water/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 15 | [三数之和](https://leetcode.cn/problems/3sum/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
@@ -27,6 +28,9 @@
 | 25 | [K 个一组翻转链表](https://leetcode.cn/problems/reverse-nodes-in-k-group/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 26 | [删除有序数组中的重复项](https://leetcode.cn/problems/remove-duplicates-from-sorted-array/description/) | ✅ | ⭐ |
 | 27 | [移除元素](https://leetcode.cn/problems/remove-element/description/) | ✅ | ⭐ |
+| 33 | [搜索旋转排序数组](https://leetcode.cn/problems/search-in-rotated-sorted-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 34 | [在排序数组中查找元素的第一个和最后一个位置](https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 35 | [搜索插入位置](https://leetcode.cn/problems/search-insert-position/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 39 | [组合总和](https://leetcode.cn/problems/combination-sum/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 41 | [缺失的第一个正数](https://leetcode.cn/problems/first-missing-positive/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐⭐ |
 | 42 | [接雨水](https://leetcode.cn/problems/trapping-rain-water/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
@@ -38,6 +42,7 @@
 | 54 | [螺旋矩阵](https://leetcode.cn/problems/spiral-matrix/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 56 | [合并区间](https://leetcode.cn/problems/merge-intervals/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 73 | [矩阵置零](https://leetcode.cn/problems/set-matrix-zeroes/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 74 | [搜索二维矩阵](https://leetcode.cn/problems/search-a-2d-matrix/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 76 | [最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/description/) | ✅ | ⭐⭐⭐ |
 | 78 | [子集](https://leetcode.cn/problems/subsets/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 79 | [单词搜索](https://leetcode.cn/problems/word-search/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
@@ -60,6 +65,7 @@
 | 145 | [二叉树的后序遍历](https://leetcode.cn/problems/binary-tree-postorder-traversal/description/) | ✅ | ⭐ |
 | 146 | [LRU 缓存](https://leetcode.cn/problems/lru-cache/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 148 | [排序链表](https://leetcode.cn/problems/sort-list/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 153 | [寻找旋转排序数组中的最小值](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 160 | [相交链表](https://leetcode.cn/problems/intersection-of-two-linked-lists/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 167 | [两数之和 II - 输入有序数组](https://leetcode.cn/problems/two-sum-ii-input-array-is-sorted/description/) | ✅ | ⭐ |
 | 189 | [轮转数组](https://leetcode.cn/problems/rotate-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
