--- a/算法/已刷.md
+++ b/算法/已刷.md
@@ -8,7 +8,7 @@
 
 >这里的难度是题目的实际难度。
 
->count：80。
+>count：85。
 
 | 题号 | 地址 | 是否已刷 | 难度 |
 | --- | --- |--- |--- |
@@ -21,6 +21,7 @@
 | 15 | [三数之和](https://leetcode.cn/problems/3sum/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 17 | [电话号码的字母组合](https://leetcode.cn/problems/letter-combinations-of-a-phone-number/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 19 | [删除链表的倒数第 N 个结点](https://leetcode.cn/problems/remove-nth-node-from-end-of-list/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 20 | [有效的括号](https://leetcode.cn/problems/valid-parentheses/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 21 | [合并两个有序链表](https://leetcode.cn/problems/merge-two-sorted-lists/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 22 | [括号生成](https://leetcode.cn/problems/generate-parentheses/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 23 | [合并 K 个升序链表](https://leetcode.cn/problems/merge-k-sorted-lists/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
@@ -47,6 +48,7 @@
 | 78 | [子集](https://leetcode.cn/problems/subsets/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 79 | [单词搜索](https://leetcode.cn/problems/word-search/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 83 | [删除排序链表中的重复元素](https://leetcode.cn/problems/remove-duplicates-from-sorted-list/description/) | ✅ | ⭐ |
+| 84 | [柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 94 | [二叉树的中序遍历](https://leetcode.cn/problems/binary-tree-inorder-traversal/description/) | ✅ | ⭐ |
 | 98 | [验证二叉搜索树](https://leetcode.cn/problems/validate-binary-search-tree/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 101 | [对称二叉树](https://leetcode.cn/problems/symmetric-tree/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
@@ -66,6 +68,7 @@
 | 146 | [LRU 缓存](https://leetcode.cn/problems/lru-cache/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 148 | [排序链表](https://leetcode.cn/problems/sort-list/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 153 | [寻找旋转排序数组中的最小值](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 155 | [最小栈](https://leetcode.cn/problems/min-stack/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 160 | [相交链表](https://leetcode.cn/problems/intersection-of-two-linked-lists/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 167 | [两数之和 II - 输入有序数组](https://leetcode.cn/problems/two-sum-ii-input-array-is-sorted/description/) | ✅ | ⭐ |
 | 189 | [轮转数组](https://leetcode.cn/problems/rotate-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
@@ -86,9 +89,11 @@
 | 303 | [区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/description/) | ✅ | ⭐ |
 | 304 | [二维区域和检索 - 矩阵不可变](https://leetcode.cn/problems/range-sum-query-2d-immutable/description/) | ✅ | ⭐⭐ |
 | 344 | [反转字符串](https://leetcode.cn/problems/reverse-string/description/) | ✅ | ⭐ |
+| 394 | [字符串解码](https://leetcode.cn/problems/decode-string/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 437 | [路径总和 III](https://leetcode.cn/problems/path-sum-iii/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 438 | [找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/description/) | ✅ | ⭐ |
 | 543 | [二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 560 | [和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 567 | [字符串的排列](https://leetcode.cn/problems/permutation-in-string/description/) | ✅ | ⭐ |
+| 739 | [每日温度](https://leetcode.cn/problems/daily-temperatures/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 994 | [腐烂的橘子](https://leetcode.cn/problems/rotting-oranges/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
