--- a/算法/已刷.md
+++ b/算法/已刷.md
@@ -8,7 +8,7 @@
 
 >这里的难度是题目的实际难度。
 
->count：92。
+>count：103。
 
 | 题号 | 地址 | 是否已刷 | 难度 |
 | --- | --- |--- |--- |
@@ -29,6 +29,7 @@
 | 25 | [K 个一组翻转链表](https://leetcode.cn/problems/reverse-nodes-in-k-group/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 26 | [删除有序数组中的重复项](https://leetcode.cn/problems/remove-duplicates-from-sorted-array/description/) | ✅ | ⭐ |
 | 27 | [移除元素](https://leetcode.cn/problems/remove-element/description/) | ✅ | ⭐ |
+| 32 | [最长有效括号](https://leetcode.cn/problems/longest-valid-parentheses/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 33 | [搜索旋转排序数组](https://leetcode.cn/problems/search-in-rotated-sorted-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 34 | [在排序数组中查找元素的第一个和最后一个位置](https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 35 | [搜索插入位置](https://leetcode.cn/problems/search-insert-position/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
@@ -44,6 +45,7 @@
 | 54 | [螺旋矩阵](https://leetcode.cn/problems/spiral-matrix/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 55 | [跳跃游戏](https://leetcode.cn/problems/jump-game/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 56 | [合并区间](https://leetcode.cn/problems/merge-intervals/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 70 | [爬楼梯](https://leetcode.cn/problems/climbing-stairs/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 73 | [矩阵置零](https://leetcode.cn/problems/set-matrix-zeroes/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 74 | [搜索二维矩阵](https://leetcode.cn/problems/search-a-2d-matrix/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 76 | [最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/description/) | ✅ | ⭐⭐⭐ |
@@ -59,22 +61,26 @@
 | 105 | [从前序与中序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 108 | [将有序数组转换为二叉搜索树](https://leetcode.cn/problems/convert-sorted-array-to-binary-search-tree/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 114 | [二叉树展开为链表](https://leetcode.cn/problems/flatten-binary-tree-to-linked-list/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 118 | [杨辉三角](https://leetcode.cn/problems/pascals-triangle/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 121 | [买卖股票的最佳时机](https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 124 | [二叉树中的最大路径和](https://leetcode.cn/problems/binary-tree-maximum-path-sum/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 128 | [最长连续序列](https://leetcode.cn/problems/longest-consecutive-sequence/description/) | ✅ | ⭐⭐ |
 | 131 | [分割回文串](https://leetcode.cn/problems/palindrome-partitioning/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 138 | [随机链表的复制](https://leetcode.cn/problems/copy-list-with-random-pointer/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 139 | [单词拆分](https://leetcode.cn/problems/word-break/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 141 | [环形链表](https://leetcode.cn/problems/linked-list-cycle/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 142 | [环形链表 II](https://leetcode.cn/problems/linked-list-cycle-ii/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 144 | [二叉树的前序遍历](https://leetcode.cn/problems/binary-tree-preorder-traversal/description/) | ✅ | ⭐ |
 | 145 | [二叉树的后序遍历](https://leetcode.cn/problems/binary-tree-postorder-traversal/description/) | ✅ | ⭐ |
 | 146 | [LRU 缓存](https://leetcode.cn/problems/lru-cache/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 148 | [排序链表](https://leetcode.cn/problems/sort-list/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 152 | [乘积最大子数组](https://leetcode.cn/problems/maximum-product-subarray/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 153 | [寻找旋转排序数组中的最小值](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 155 | [最小栈](https://leetcode.cn/problems/min-stack/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 160 | [相交链表](https://leetcode.cn/problems/intersection-of-two-linked-lists/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 167 | [两数之和 II - 输入有序数组](https://leetcode.cn/problems/two-sum-ii-input-array-is-sorted/description/) | ✅ | ⭐ |
 | 189 | [轮转数组](https://leetcode.cn/problems/rotate-array/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 198 | [打家劫舍](https://leetcode.cn/problems/house-robber/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 199 | [二叉树的右视图](https://leetcode.cn/problems/binary-tree-right-side-view/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 200 | [岛屿数量](https://leetcode.cn/problems/number-of-islands/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 206 | [反转链表](https://leetcode.cn/problems/reverse-linked-list/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
@@ -89,15 +95,20 @@
 | 238 | [除自身以外数组的乘积](https://leetcode.cn/problems/product-of-array-except-self/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 239 | [滑动窗口最大值](https://leetcode.cn/problems/sliding-window-maximum/description/) | ✅ | ⭐⭐ |
 | 240 | [搜索二维矩阵 II](https://leetcode.cn/problems/search-a-2d-matrix-ii/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 279 | [完全平方数](https://leetcode.cn/problems/perfect-squares/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 283 | [移动零](https://leetcode.cn/problems/move-zeroes/description/) | ✅ | ⭐ |
 | 295 | [数据流的中位数](https://leetcode.cn/problems/find-median-from-data-stream/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 300 | [最长递增子序列](https://leetcode.cn/problems/longest-increasing-subsequence/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 303 | [区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/description/) | ✅ | ⭐ |
 | 304 | [二维区域和检索 - 矩阵不可变](https://leetcode.cn/problems/range-sum-query-2d-immutable/description/) | ✅ | ⭐⭐ |
+| 322 | [零钱兑换](https://leetcode.cn/problems/coin-change/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 344 | [反转字符串](https://leetcode.cn/problems/reverse-string/description/) | ✅ | ⭐ |
 | 347 | [前 K 个高频元素](https://leetcode.cn/problems/top-k-frequent-elements/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 394 | [字符串解码](https://leetcode.cn/problems/decode-string/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 416 | [分割等和子集](https://leetcode.cn/problems/partition-equal-subset-sum/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 437 | [路径总和 III](https://leetcode.cn/problems/path-sum-iii/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 438 | [找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/description/) | ✅ | ⭐ |
+| 509 | [斐波那契数](https://leetcode.cn/problems/fibonacci-number/description/) | ✅ | ⭐ |
 | 543 | [二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 560 | [和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
 | 567 | [字符串的排列](https://leetcode.cn/problems/permutation-in-string/description/) | ✅ | ⭐ |
