--- a/算法/已刷.md
+++ b/算法/已刷.md
@@ -8,7 +8,7 @@
 
 >这里的难度是题目的实际难度。
 
->count：103。
+>count：107。
 
 | 题号 | 地址 | 是否已刷 | 难度 |
 | --- | --- |--- |--- |
@@ -45,7 +45,10 @@
 | 54 | [螺旋矩阵](https://leetcode.cn/problems/spiral-matrix/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 55 | [跳跃游戏](https://leetcode.cn/problems/jump-game/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 56 | [合并区间](https://leetcode.cn/problems/merge-intervals/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 62 | [不同路径](https://leetcode.cn/problems/unique-paths/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 64 | [最小路径和](https://leetcode.cn/problems/minimum-path-sum/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 70 | [爬楼梯](https://leetcode.cn/problems/climbing-stairs/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
+| 72 | [编辑距离](https://leetcode.cn/problems/edit-distance/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 73 | [矩阵置零](https://leetcode.cn/problems/set-matrix-zeroes/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 74 | [搜索二维矩阵](https://leetcode.cn/problems/search-a-2d-matrix/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 76 | [最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/description/) | ✅ | ⭐⭐⭐ |
@@ -115,3 +118,4 @@
 | 739 | [每日温度](https://leetcode.cn/problems/daily-temperatures/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 763 | [划分字母区间](https://leetcode.cn/problems/partition-labels/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
 | 994 | [腐烂的橘子](https://leetcode.cn/problems/rotting-oranges/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
+| 1143 | [最长公共子序列](https://leetcode.cn/problems/longest-common-subsequence/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐ |
