--- a/算法/图.md
+++ b/算法/图.md
@@ -11,3 +11,19 @@
 - 5.出度（outdegree）：有多少条边从该顶点指出。
 
 - 6.邻接矩阵：使用一个n*n的矩阵表示图，每一行（列）代表一个顶点，矩阵元素代表边，用1或0表示两个顶点之间是否存在边。
+
+>行列代表顶点，矩阵元素代表边。
+
+## [课程表 II](https://leetcode.cn/problems/course-schedule-ii/description/)
+
+- 1.首先使用一个二维数组将依赖同一个课程的课程放到一个数组中。
+
+- 2.使用一个一维数组记录每个课程依赖的课程数量。
+
+- 3.遍历上面课程依赖的一维数组，如果课程依赖为0的话，那这个课程是可以直接修的，将这些为0的课程push到一个队列中。
+
+- 4.如果队列长度大于0的话，也就是有课程可以直接修的话，那就将最前面的课程弹出，直接修，加入到结果数组中。
+
+- 5.然后去二维数组中找到依赖刚才弹出这个课程的课程，如果有课程只依赖刚才那个课程，刚才那个课程已经修了，那这个课程在后面就可以直接修了，将这个课程加入到待修课程队列中，并将这些课程的依赖课程全部减1。
+
+- 6.循环执行这个过程，直到结束，结束后如果已修课程的长度等于总课程的长度，那就修完了，返回结果数组，如果不等于，那就是有课程没法修，返回空数组。
