--- a/算法/排序.md
+++ b/算法/排序.md
@@ -1,8 +1,37 @@
 # 排序
 
-## 插入排序
+## 1.选择排序
+
+- 1.开启一个循环，每轮从未排序区间选择最小的元素，将其放到已排序区间的末尾。
+
+```js
+function selectSort(nums) {
+    for (let i = 0; i < nums.length; i++) {
+        let minIndex = i
+        for (let j = i; j < nums.length; j++) {
+            if (nums[j] < nums[minIndex]) {
+                minIndex = j
+            }
+        }
+        [nums[i], nums[minIndex]] = [nums[minIndex], nums[i]]
+    }
+}
+```
+
+>代码关键点，拿一个变量去记录未排序元素中对比最小元素的下标，从而找到最小元素。
+
+## 2.冒泡排序
+
+- 1.通过连续地比较与交换相邻元素实现排序。这个过程就像气泡从底部升到顶部一样，因此得名冒泡排序。
+
+
+## 3.插入排序
 
 - 1.和打扑克牌类似。
+
+## 4.快速排序
+
+## 5.归并排序
 
 
 
