feat: 每天刷一题算法

--- a/算法/复习/重点关照.md
+++ b/算法/复习/重点关照.md
@@ -3,3 +3,4 @@
 | 题号 | 地址 | 是否已刷 | 难度 |
 | --- | --- |--- |--- |
 | 210 | [课程表 II](https://leetcode.cn/problems/course-schedule-ii/description/) | ✅ | ⭐⭐ |
+| 25 | [K 个一组翻转链表](https://leetcode.cn/problems/reverse-nodes-in-k-group/description/?envType=study-plan-v2&envId=top-100-liked) | ✅ | ⭐⭐ |
