--- a/计划/2024年1月第3周/2023.01.15-2023.01.21.md
+++ b/计划/2024年1月第3周/2023.01.15-2023.01.21.md
@@ -1,11 +1,21 @@
 # 计划
 
-- 1.读书20小时。
+- 1.读书20小时。 ✅
 
-- 2.主持读书会。
+>完成，上周读书20.5小时。
+
+- 2.主持读书会。 ✅
+
+>周六晚上读书会主持了。
 
 - 3.代码bug率一个迭代不能超过10个。
 
-- 4.反思总结迭代的问题。
+>这周没有迭代，在做优化需求。
+
+- 4.反思总结迭代的问题。 ✅
+
+>已反思总结。
 
 - 5.坚持微习惯。
+
+>坚持晚上刷牙了。
