--- a/计划/2024/1月/2023.01.22-2023.01.28.md
+++ b/计划/2024/1月/2023.01.22-2023.01.28.md
@@ -2,9 +2,15 @@
 
 - 1.读书：《置身事内》《乡土中国》《激荡三十年》都读完。
 
+>《置身事内》已读完。
+
 - 2.学会吹头发。
 
+>后面报个课专门学习一下。
+
 - 3.坚持微习惯。
+
+>刷牙坚持了一些
 
 - 4.晚上12:00睡，早上8:00起。
 
